test_files/negative/xref/badoffset.stats_strict
Not a PDF file
PDF error : Xref table states position 9, which does not match in object 1 at offset 15 [0xf] in file !
